# connectaboard

./: .gitignore  README.md  pyproject.toml
connectaboard/: __init__.py  board_controller.py  board_parser.py  config.py  context.py  foes.py  game_states.py  helpers.py  main.py  more_chess.py  opponent.py  opponents.py
services/: README.md  connectaboard.service  connectaboard_run.service  connectaboard_update.service  start.sh  update.sh
tests/: test_board_controller.py  test_board_parser.py  test_helpers.py
